--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,51 @@
-# WordPress exclusions
-wp-config.php
-wp-content/uploads/
-wp-content/upgrade/
-wp-content/backup/
-wp-content/cache/
-wp-content/advanced-cache.php
-wp-content/wp-cache-config.php
-wp-content/object-cache.php
-wp-content/plugins/
-wp-content/themes/twenty*/
+# Wordpress - ignore core, configuration, examples, uploads and logs.
+# https://github.com/github/gitignore/blob/main/WordPress.gitignore
 
-# General exclusions
-.DS_Store
-Thumbs.db
-sftp-config.json
+# Core
+#
+# Note: if you want to stage/commit WP core files
+# you can delete this whole section/until Configuration.
+/wp-admin/
+/wp-content/index.php
+/wp-content/languages
+/wp-content/plugins/index.php
+/wp-content/themes/index.php
+/wp-includes/
+/index.php
+/license.txt
+/readme.html
+/wp-*.php
+/xmlrpc.php
+/node_modules
+
+# Configuration
+wp-config.php
+
+# Example themes
+/wp-content/themes/twenty*/
+
+# Example plugin
+/wp-content/plugins/hello.php
+
+# Uploads
+/wp-content/uploads/
+
+# Log files
 *.log
-*.sql
-*.sqlite
-*.zip
-*.tar.gz
+
+# htaccess
+/.htaccess
+
+# All plugins
+#
+# Note: If you wish to whitelist plugins,
+# uncomment the next line
+/wp-content/plugins
+
+# All themes
+#
+# Note: If you wish to whitelist themes,
+# uncomment the next line
+/wp-content/themes
+
+.wpress
